--- a/examples/redis/Examples.StackExchangeRedis/Examples.StackExchangeRedis.csproj
+++ b/examples/redis/Examples.StackExchangeRedis/Examples.StackExchangeRedis.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.7.0" />
+    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="$(OpenTelemetryCoreLatestVersion)" />
   </ItemGroup>
 
   <ItemGroup>
