[OneCollectorExporter] Resolve AOT warnings in OpenTelemetry.Exporter.OneCollector
- Need to use the Microsoft.Extensions.Configuration.Binder source generator to solve 2 warnings. Need to reference the 8.0.1 version to get the latest updated to the source generator.

--- a/test/OpenTelemetry.AotCompatibility.TestApp/OpenTelemetry.AotCompatibility.TestApp.csproj
+++ b/test/OpenTelemetry.AotCompatibility.TestApp/OpenTelemetry.AotCompatibility.TestApp.csproj
@@ -13,6 +13,7 @@
       When adding projects here please also update the verify-aot-compat job in
       .github\workflows\ci.yml so that it runs for the project(s) being added.
     -->
+    <TrimmerRootAssembly Include="OpenTelemetry.Exporter.OneCollector" />
     <TrimmerRootAssembly Include="OpenTelemetry.Extensions" />
     <TrimmerRootAssembly Include="OpenTelemetry.Extensions.Enrichment" />
     <TrimmerRootAssembly Include="OpenTelemetry.Instrumentation.AWS" />
