--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -115,6 +115,7 @@ components:
     - SergeyKanzhelev
   test/OpenTelemetry.Extensions.Tests/:
     - codeblanch
+    - mikegoldsmith
   test/OpenTelemetry.Extensions.AWS.Tests/:
     - srprash
     - atshaw43
