--- a/.github/workflows/Component.BuildTest.yml
+++ b/.github/workflows/Component.BuildTest.yml
@@ -54,7 +54,7 @@ jobs:
       run: dotnet tool install -g dotnet-coverage
 
     - name: Merging test results
-      if: ${{ hashFiles('./TestResults/*.coverage') != '' }}
+      if: ${{ hashFiles('./TestResults/**/*.coverage') != '' }}
       run: dotnet-coverage merge -r -f cobertura -o ./TestResults/Cobertura.xml ./TestResults/*.coverage
 
     - name: Upload code coverage ${{ inputs.code-cov-prefix }}-${{ inputs.code-cov-name }}
